force-app/main/default/objects/Leaverequest__c/Leaverequest__c.object-meta.xml
<CustomObject>
    <label>Leave Request</label>
    <nameField>
        <displayFormat>LR-{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>