force-app/main/default/objects/Leaverequest__c/fields/BusinessTravelRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>BusinessTravelRequestNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Travel Request Number</label>
    <referenceTo>BusinessTravelRequest__c</referenceTo>
    <relationshipLabel>Leave Request</relationshipLabel>
    <relationshipName>Leave_Request</relationshipName>
    <type>Lookup</type>
</CustomField>