force-app/main/default/objects/Leaverequest__c/fields/HalfDay__c.field-meta.xml
<CustomField>
    <fullName>HalfDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Half Day</label>
    <type>Checkbox</type>
</CustomField>