force-app/main/default/objects/Leaverequest__c/fields/HealthCertificate__c.field-meta.xml
<CustomField>
    <fullName>HealthCertificate__c</fullName>
    <label>Health Certificate</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>