force-app/main/default/objects/Leaverequest__c/fields/LeaveusedHalf__c.field-meta.xml
<CustomField>
    <fullName>LeaveusedHalf__c</fullName>
    <label>Leave used (Half)</label>
    <summaryFilterItems>
        <field>LeaveDay__c.BusinessDay__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.InCycle__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Half_Day__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LeaveDay__c.Status__c</field>
        <operation>equals</operation>
        <value>Used</value>
    </summaryFilterItems>
    <summaryForeignKey>LeaveDay__c.LeaveRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>