force-app/main/default/objects/Leaverequest__c/fields/TotalLeaveinCycle__c.field-meta.xml
<CustomField>
    <fullName>TotalLeaveinCycle__c</fullName>
    <formula>If (   TEXT( Status__c)  = &quot;Approved&quot;,  Employee__r.WorkCycle__r.LeaveDayUsedHalf__c /2 + Employee__r.WorkCycle__r.LeaveDayUsedFull__c +  Employee__r.WorkCycle__r.LeaveDaywilluseHalf__c /2 + Employee__r.WorkCycle__r.LeaveDaywilluseFull__c,if(OR(TEXT(Status__c)=&quot;Created&quot;,TEXT(Status__c)=&quot;Pending Approval&quot;),Employee__r.WorkCycle__r.LeaveDayUsedHalf__c /2 + Employee__r.WorkCycle__r.LeaveDayUsedFull__c +  Employee__r.WorkCycle__r.LeaveDaywilluseHalf__c /2 + Employee__r.WorkCycle__r.LeaveDaywilluseFull__c +   Employee__r.WorkCycle__r.LeaveDayCreatedFull__c +  Employee__r.WorkCycle__r.LeaveDayCreatedHalf__c  /2,0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Leave in Cycle</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>