force-app/main/default/objects/Leaverequest__c/fields/TotalWFHinCycle__c.field-meta.xml
<CustomField>
    <fullName>TotalWFHinCycle__c</fullName>
    <formula>Employee__r.WorkCycle__r.WFHDayCreated__c +  Employee__r.WorkCycle__r.WFHDayPlanned__c  + Employee__r.WorkCycle__r.WFHDayUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total WFH in Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>