force-app/main/default/objects/Leaverequest__c/fields/UseAnnualLeaveCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>UseAnnualLeaveCurrentYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Annual Leave - Current Year</label>
    <type>Checkbox</type>
</CustomField>