force-app/main/default/objects/Leaverequest__c/fields/UseAnnualLeaveLastYear__c.field-meta.xml
<CustomField>
    <fullName>UseAnnualLeaveLastYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Annual Leave - Last Year</label>
    <type>Checkbox</type>
</CustomField>