force-app/main/default/objects/Leaverequest__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <formula>(Employee__r.WorkCycle__r.Annual_Leave_Last_Year_Remain_Formula__c +  Employee__r.WorkCycle__r.Annual_Leave_Current_Year_Remain_formula__c ) - ( Employee__r.WorkCycle__r.AnnualLeavewillUseFull__c +  Employee__r.WorkCycle__r.AnnualLeavewillUseHalf__c/2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warning</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>