force-app/main/default/objects/Leaverequest__c/fields/WorkPlan__c.field-meta.xml
<CustomField>
    <fullName>WorkPlan__c</fullName>
    <label>Work Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>