force-app/main/default/objects/Leaverequest__c/fields/WorkReport__c.field-meta.xml
<CustomField>
    <fullName>WorkReport__c</fullName>
    <label>Work Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>