force-app/main/default/objects/Leaverequest__c/recordTypes/BusinessTravel.recordType-meta.xml
<RecordType>
    <fullName>BusinessTravel</fullName>
    <active>true</active>
    <label>Business Travel</label>
</RecordType>