force-app/main/default/objects/Leaverequest__c/recordTypes/NormalLeave.recordType-meta.xml
<RecordType>
    <fullName>NormalLeave</fullName>
    <active>true</active>
    <label>Normal Leave</label>
</RecordType>