force-app/main/default/objects/Leaverequest__c/recordTypes/PaidLeave.recordType-meta.xml
<RecordType>
    <fullName>PaidLeave</fullName>
    <active>true</active>
    <label>Paid Leave</label>
</RecordType>