force-app/main/default/objects/Leaverequest__c/recordTypes/Unpaid_Leave.recordType-meta.xml
<RecordType>
    <fullName>Unpaid_Leave</fullName>
    <active>true</active>
    <label>Unpaid Leave</label>
</RecordType>