force-app/main/default/objects/Leaverequest__c/recordTypes/WorkFromHome.recordType-meta.xml
<RecordType>
    <fullName>WorkFromHome</fullName>
    <active>true</active>
    <label>Work From Home</label>
</RecordType>