force-app/main/default/objects/Leaverequest__c/validationRules/Date_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Logic</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot exceed End Date!</errorMessage>
</ValidationRule>