force-app/main/default/objects/Leaverequest__c/validationRules/Half_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Half_Day</fullName>
    <active>true</active>
    <errorConditionFormula>AND( HalfDay__c = TRUE,  Start_Date__c  &lt;&gt;   End_Date__c )</errorConditionFormula>
    <errorDisplayField>HalfDay__c</errorDisplayField>
    <errorMessage>Please chooese End Date as same as Start Date in case you apply for a half day leave</errorMessage>
</ValidationRule>