force-app/main/default/objects/Leaverequest__c/validationRules/Leave_Day_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Day_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &apos;Normal Leave&apos;,
  ISCHANGED(Status__c),
  ( LeaveusedHalf__c/2  + LeaveusedFull__c) &gt; 0,
  ISPICKVAL(Status__c, &apos;Canceled&apos;)
)</errorConditionFormula>
    <errorMessage>This Leave Request has been used and cannot be canceled!</errorMessage>
</ValidationRule>