force-app/main/default/objects/Leaverequest__c/validationRules/No_Weekend.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Weekend</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
 Weekday(Start_Date__c) = 7, 
 Weekday(End_Date__c) = 7,
 Weekday(Start_Date__c) = 1, 
 Weekday(End_Date__c) = 1)</errorConditionFormula>
    <errorMessage>Leave Request cannot be on Weekend!</errorMessage>
</ValidationRule>