force-app/main/default/objects/Leaverequest__c/validationRules/Past_Leave_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_Leave_Request</fullName>
    <active>false</active>
    <errorConditionFormula>OR (Start_Date__c &lt; Today(),
 End_Date__c &lt; Today())</errorConditionFormula>
    <errorMessage>Leave Request cannot be in the past!</errorMessage>
</ValidationRule>