force-app/main/default/objects/Leaverequest__c/validationRules/WFH_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>WFH_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &apos;Work From Home&apos;,
  ISCHANGED(Status__c),
   Employee__r.WorkCycle__r.WFHDayUsed__c &gt; 0,
  ISPICKVAL(Status__c, &apos;Canceled&apos;)
)</errorConditionFormula>
    <errorMessage>This Leave Request has been used and cannot be canceled!</errorMessage>
</ValidationRule>