force-app/main/default/objects/Leaverequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Employee__c</columns>
    <columns>Category__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Description__c</columns>
    <columns>HalfDay__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PaidType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>